--- a/FeignModel80/src/main/resources/application.yml
+++ b/FeignModel80/src/main/resources/application.yml
@@ -9,4 +9,6 @@ spring:
       host: 127.0.0.1
       port: 8500
       discovery:
-        service-name: ${spring.application.name}s
+        service-name: ${spring.application.name}
+        heartbeat:
+          enabled: true
