--- a/GateWay9527/src/main/resources/application.yml
+++ b/GateWay9527/src/main/resources/application.yml
@@ -9,6 +9,8 @@ spring:
       port: 8500
       discovery:
        service-name: ${spring.application.name}
+       heartbeat:
+          enabled: true
     gateway:
       routes:
         - id: UserModel1
