--- a/LoginModel8083/src/main/resources/application.yml
+++ b/LoginModel8083/src/main/resources/application.yml
@@ -11,3 +11,5 @@ spring:
       port: 8500
       discovery:
         service-name: ${spring.application.name}
+        heartbeat:
+          enabled: true
