--- a/UserModel8082/src/main/resources/application.yml
+++ b/UserModel8082/src/main/resources/application.yml
@@ -10,4 +10,6 @@ spring:
      port: 8500
      discovery:
       service-name: ${spring.application.name}
+      heartbeat:
+          enabled: true
 
